<resources>
    <string name="app_name">Client Book</string>

    <string name="appointment">Appointment</string>

    <string name="table">Table</string>

    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="yesterday">Yesterday</string>
    <string name="date" translatable="false">%d %m, %w</string>


    <string name="selector_bottomsheet_title">What do you want to create?</string>
    <string name="selector_bottomsheet_appointment">Create an appointment</string>
    <string name="selector_bottomsheet_client">Create a client</string>


    <string name="client_creation">New client</string>
    <string name="client_update">Client edit</string>
    <string name="client_creation_image">Choose image</string>
    <string name="client_creation_name">Client name</string>
    <string name="client_creation_phone_number">Phone number</string>
    <string name="client_creation_name_error">You\'ve created client with this name</string>
    <string name="client_creation_name_error_no_text">You must define client name</string>
    <string name="client_creation_phone_number_error">You\'ve created client with this phone number yet</string>

    <string name="search_client">Search client</string>
    <string name="search_by_name">Search by name</string>
    <string name="search_by_phone_number">Search by phone number</string>


    <string name="client_appointment">New appointment</string>

    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="sunday">Sun</string>


    <string name="no_appointments">At the moment there is no appointments</string>


    <string name="appointment_creation_title">New Task</string>
    <string name="appointment_creation_title_error">Enter title</string>
    <string name="appointment_creation_text">Task name</string>
    <string name="appointment_creation_cost">Task cost</string>
    <string name="appointment_creation_cost_error">Enter cost</string>
    <string name="appointment_creation_choose_client">Choose a client</string>
    <string name="appointment_creation_start">Start time</string>
    <string name="appointment_creation_time">Time</string>
    <string name="appointment_creation_duration">Task duration</string>
    <string name="appointment_creation_date" translatable="false">%w, %d %m %y</string>
    <string name="appointment_creation_date_error">You already have appointment at this time: %t, %c, %s-%e</string>

    <string name="client_page_next">Future tasks - %t</string>
    <string name="client_page_all">All tasks - %t</string>


    <string name="open_client">Open client</string>
    <string name="remove_appointment">Remove appointment</string>
    <string name="edit_appointment">Edit appointment</string>

    <string name="confirmation">Confirmation</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="sure_delete_appointment">Are you sure want to delete this appointment?</string>

</resources>