<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="240dp"
    android:layout_height="wrap_content"
    android:background="@drawable/tooltip_drawable"
    android:focusable="false"

    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/client_row"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="?selectableItemBackground"
        android:gravity="center_vertical"
        android:paddingHorizontal="16dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_person"
            app:tint="@color/accent_light_light_light" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/montserratsemibold"
            android:includeFontPadding="false"
            android:text="@string/open_client"
            android:textColor="@color/accent_light_light_light"

            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/edit_row"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="?selectableItemBackground"
        android:gravity="center_vertical"
        android:paddingHorizontal="16dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_edit"
            app:tint="@color/accent_light_light_light" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/montserratsemibold"
            android:includeFontPadding="false"
            android:text="@string/edit_appointment"
            android:textColor="@color/accent_light_light_light"

            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/delete_row"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="?selectableItemBackground"
        android:gravity="center_vertical"
        android:paddingHorizontal="16dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_trash"
            app:tint="@color/accent_light_light_light" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/montserratsemibold"
            android:includeFontPadding="false"
            android:text="@string/remove_appointment"
            android:textColor="@color/accent_light_light_light"

            android:textSize="14sp" />

    </LinearLayout>




</LinearLayout>