<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.ClientCreationActivity"
    android:background="@color/light_black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingHorizontal="32dp"
        android:orientation="vertical">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal"

            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/button_back"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/ic_back"
                app:tint="@color/accent"/>

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserratbold"
                android:layout_marginLeft="12dp"
                android:text="@string/client_creation"
                android:ellipsize="end"
                android:textColor="@color/accent"
                android:textSize="28sp" />


        </LinearLayout>


<!--        <androidx.cardview.widget.CardView-->
<!--            android:id="@+id/picture"-->
<!--            android:layout_width="160dp"-->
<!--            android:layout_height="160dp"-->
<!--            android:layout_marginTop="8dp"-->
<!--            android:layout_gravity="center_horizontal"-->
<!--            app:cardElevation="0dp"-->
<!--            app:cardCornerRadius="80dp"-->
<!--            app:cardBackgroundColor="@color/accent_dark">-->

<!--            <ImageView-->
<!--                android:layout_width="110dp"-->
<!--                android:layout_height="110dp"-->
<!--                android:layout_gravity="center"-->
<!--                android:src="@drawable/ic_person"-->
<!--                app:tint="@color/accent_light"/>-->

<!--        </androidx.cardview.widget.CardView>-->

<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="center_horizontal"-->
<!--            android:layout_marginTop="8dp"-->
<!--            android:fontFamily="@font/montserratbold"-->
<!--            android:text="@string/client_creation_image"-->
<!--            android:textColor="@color/accent"-->
<!--            android:textSize="18sp" />-->

        <TextView
            android:id="@+id/name_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_gravity="start"
            android:layout_marginTop="18dp"
            android:fontFamily="@font/montserratbold"
            android:text="@string/client_creation_name_error"
            android:textColor="@color/red"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/rect"
            android:backgroundTint="@color/accent"
            android:fontFamily="@font/montserratsemibold"
            android:gravity="center_vertical"
            android:hint="@string/client_creation_name"
            android:inputType="text"
            android:maxLength="24"
            android:maxLines="1"
            android:paddingHorizontal="16dp"
            android:textColor="@color/accent_dark_dark"
            android:textColorHint="@color/accent_dark" />

        <TextView
            android:id="@+id/phone_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_gravity="start"
            android:layout_marginTop="18dp"
            android:fontFamily="@font/montserratbold"
            android:text="@string/client_creation_phone_number_error"
            android:textColor="@color/red"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/phone_number"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/rect"
            android:backgroundTint="@color/accent"
            android:fontFamily="@font/montserratsemibold"
            android:gravity="center_vertical"
            android:hint="@string/client_creation_phone_number"
            android:inputType="phone"
            android:maxLength="24"
            android:maxLines="1"
            android:paddingHorizontal="16dp"

            android:textColor="@color/accent_dark_dark"
            android:textColorHint="@color/accent_dark" />


    </LinearLayout>

    <ImageView
        android:id="@+id/confirm"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:padding="8dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"

        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"

        android:src="@drawable/ic_done"
        app:tint="@color/accent_dark_dark"
        android:background="@drawable/rect"
        android:backgroundTint="@color/accent"/>

</androidx.constraintlayout.widget.ConstraintLayout>