<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:paddingHorizontal="48dp"

    android:background="@drawable/top_rounded">

    <LinearLayout
        android:layout_width="40dp"
        android:layout_height="6dp"
        android:background="@drawable/rounded"
        android:backgroundTint="@color/dark_gray"

        android:layout_marginVertical="8dp"

        android:layout_gravity="center_horizontal"/>

    <TextView
        android:layout_marginTop="4dp"
        android:layout_marginBottom="12dp"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="@font/montserratbold"
        android:gravity="center_vertical"
        android:text="@string/selector_bottomsheet_title"
        android:textColor="@color/accent_dark"
        android:textSize="16sp"/>

    <LinearLayout
        android:id="@+id/create_appointment"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/medium_rounded"
        android:paddingHorizontal="16dp"
        android:backgroundTint="@color/accent_light_light">

        <TextView
            android:layout_marginVertical="12dp"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/montserratbold"
            android:gravity="center_vertical"
            android:text="@string/selector_bottomsheet_appointment"
            android:textColor="@color/accent_dark"
            android:textSize="16sp"/>

        <ImageView
            android:layout_gravity="center_vertical"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_next"
            app:tint="@color/accent_dark" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/create_client"

        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/medium_rounded"
        android:paddingHorizontal="16dp"
        android:backgroundTint="@color/accent_light_light">

        <TextView
            android:layout_marginVertical="12dp"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/montserratbold"
            android:gravity="center_vertical"
            android:text="@string/selector_bottomsheet_client"
            android:textColor="@color/accent_dark"
            android:textSize="16sp"/>

        <ImageView
            android:layout_gravity="center_vertical"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_next"
            app:tint="@color/accent_dark" />

    </LinearLayout>


</LinearLayout>