<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.appointment_creation.AppointmentCreationActivity"
    android:paddingHorizontal="16dp"

    android:background="@color/light_black">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:orientation="horizontal"

                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/button_back"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/ic_back"
                    app:tint="@color/accent"/>

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserratbold"
                    android:layout_marginLeft="12dp"
                    android:text="@string/appointment_creation_title"
                    android:textColor="@color/accent"
                    android:ellipsize="end"
                    android:textSize="28sp" />


            </LinearLayout>

            <EditText
                android:id="@+id/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rect"
                android:backgroundTint="@color/accent"
                android:fontFamily="@font/montserratsemibold"
                android:gravity="top|start"
                android:hint="@string/appointment_creation_text"
                android:maxLines="5"
                android:maxHeight="200dp"
                android:inputType="textMultiLine"
                android:paddingHorizontal="16dp"
                android:paddingVertical="8dp"
                android:textColor="@color/accent_dark_dark"
                android:textColorHint="@color/accent_dark"/>

            <TextView
                android:id="@+id/text_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_gravity="start"
                android:layout_marginTop="18dp"
                android:fontFamily="@font/montserratbold"
                android:text="@string/appointment_creation_title_error"
                android:textColor="@color/red"
                android:textSize="14sp"/>

            <EditText
                android:id="@+id/value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:background="@drawable/rect"
                android:backgroundTint="@color/accent"
                android:fontFamily="@font/montserratsemibold"
                android:gravity="center_vertical"
                android:hint="@string/appointment_creation_cost"
                android:inputType="number"
                android:maxLength="24"
                android:maxLines="1"
                android:paddingVertical="8dp"
                android:paddingHorizontal="16dp"

                android:textColor="@color/accent_dark_dark"
                android:textColorHint="@color/accent_dark"/>

            <TextView
                android:id="@+id/value_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_gravity="start"
                android:layout_marginTop="18dp"
                android:fontFamily="@font/montserratbold"
                android:text="@string/appointment_creation_cost_error"
                android:textColor="@color/red"
                android:textSize="14sp"/>

            <LinearLayout
                android:id="@+id/client_chooser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/client_picker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="8dp"

                    android:background="@drawable/high_rounded"
                    android:backgroundTint="@color/accent">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:src="@drawable/ic_person"
                        app:tint="@color/accent_dark_dark"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserratsemibold"
                        android:layout_marginEnd="16dp"
                        android:layout_marginStart="8dp"
                        android:text="@string/appointment_creation_choose_client"
                        android:ellipsize="end"
                        android:textColor="@color/accent_dark_dark"
                        android:layout_gravity="center"
                        android:textSize="16sp" />

                </LinearLayout>

                <ImageView
                    android:id="@+id/create_client"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    android:layout_marginStart="8dp"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="8dp"

                    android:layout_gravity="end"

                    android:src="@drawable/ic_add"
                    app:tint="@color/accent_dark_dark"

                    android:background="@drawable/high_rounded"
                    android:backgroundTint="@color/accent"/>
            </LinearLayout>

            <TextView
                android:id="@+id/client_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_gravity="start"
                android:layout_marginTop="18dp"
                android:fontFamily="@font/montserratbold"
                android:text="@string/appointment_creation_choose_client"
                android:textColor="@color/red"
                android:textSize="14sp"/>

            <LinearLayout
                android:visibility="gone"
                android:id="@+id/client_chosen_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="18dp"
                android:padding="16dp"
                android:background="@drawable/high_rounded"
                android:backgroundTint="@color/accent"

                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/client_image"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/circle"
                    android:backgroundTint="@color/accent_medium"
                    android:padding="10dp"
                    android:src="@drawable/ic_person"
                    app:tint="@color/accent_dark_dark"

                    android:layout_gravity="center_vertical"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/client_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserratbold"
                        android:text="Member"
                        android:textColor="@color/accent_dark_dark"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/client_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserratbold"
                        android:text="+7 (999) 111 1111"
                        android:textColor="@color/accent_dark_dark"
                        android:textSize="14sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/high_rounded"
                android:backgroundTint="@color/accent"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:paddingHorizontal="8dp"
                android:layout_marginTop="18dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/montserratbold"
                        android:text="Wednesday, 12 june 2024"
                        android:textColor="@color/accent_dark_dark"
                        android:textSize="16sp"
                        android:layout_gravity="center"/>

                    <ImageView
                        android:id="@+id/calendar_button"
                        android:layout_width="50dp"
                        android:layout_height="30dp"
                        android:layout_weight="0"
                        android:src="@drawable/ic_calendar"
                        app:tint="@color/accent_dark_dark"
                        android:layout_gravity="center"/>


                </LinearLayout>

                <androidx.compose.ui.platform.ComposeView
                    android:id="@+id/calendar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:paddingTop="18dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_marginEnd="8dp"
                    android:layout_gravity="bottom">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:fontFamily="@font/montserratbold"
                        android:text="@string/appointment_creation_start"
                        android:textColor="@color/accent"
                        android:textSize="13sp" />

                    <LinearLayout
                        android:id="@+id/start_time_button"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:gravity="center_vertical|start"

                        android:layout_marginTop="6dp"

                        android:paddingHorizontal="16dp"
                        android:paddingVertical="4dp"

                        android:background="@drawable/rect"

                        android:backgroundTint="@color/accent"

                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/ic_clock"
                            app:tint="@color/accent_dark_dark"
                            android:layout_gravity="center"/>

                        <TextView
                            android:id="@+id/start_time"
                            android:layout_width="90dp"
                            android:layout_height="wrap_content"

                            android:fontFamily="@font/montserratsemibold"
                            android:textSize="13sp"

                            android:text="@string/appointment_creation_time"

                            android:paddingHorizontal="16dp"

                            android:textColor="@color/accent_dark_dark"/>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="bottom"

                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:fontFamily="@font/montserratbold"
                        android:text="@string/appointment_creation_duration"
                        android:textColor="@color/accent"
                        android:textSize="13sp" />

                    <LinearLayout
                        android:id="@+id/duration_button"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:gravity="center_vertical|start"

                        android:layout_marginTop="6dp"

                        android:paddingHorizontal="16dp"
                        android:paddingVertical="4dp"

                        android:background="@drawable/rect"

                        android:backgroundTint="@color/accent"

                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/ic_duration"
                            app:tint="@color/accent_dark_dark"
                            android:layout_gravity="center"/>

                        <TextView
                            android:id="@+id/duration"
                            android:layout_width="90dp"
                            android:layout_height="wrap_content"

                            android:fontFamily="@font/montserratsemibold"
                            android:textSize="13sp"

                            android:text="@string/appointment_creation_time"

                            android:paddingHorizontal="16dp"

                            android:textColor="@color/accent_dark_dark"/>

                    </LinearLayout>

                </LinearLayout>


            </LinearLayout>

            <TextView
                android:id="@+id/time_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_gravity="start"
                android:layout_marginTop="18dp"
                android:fontFamily="@font/montserratbold"
                android:text="@string/appointment_creation_date_error"
                android:textColor="@color/red"
                android:textSize="14sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"/>


        </LinearLayout>

    </ScrollView>



    <ImageView
        android:id="@+id/confirm"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:padding="8dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"

        android:layout_marginBottom="32dp"

        android:src="@drawable/ic_done"
        app:tint="@color/accent"
        android:background="@drawable/rect"
        android:backgroundTint="@color/accent_dark"/>

</androidx.constraintlayout.widget.ConstraintLayout>